k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-worker
  namespace: echo
  labels:
    app.kubernetes.io/name: echo-worker
    app.kubernetes.io/part-of: echo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: echo-worker
  ports:
    - name: http
      port: 80
      targetPort: http
