k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-api
  namespace: echo
  labels:
    app.kubernetes.io/name: echo-api
    app.kubernetes.io/part-of: echo
spec:
  rules:
    - host: echo-api.marcio.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-api
                port:
                  name: http
